2006-06-05  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-group.c: (clutter_group_remove):
	Fix parent check.

2006-06-05  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-event.h:
	Remove send_event field. Clutter shouldn't need it.  

	* clutter/clutter-main.c: (clutter_dispatch_x_event):
	Dont malloc a new clutter event for each xevent.

	* clutter/clutter-stage.h:
	* clutter/clutter-stage.c: (clutter_stage_class_init),
	(clutter_stage_get_default):
	Dont ref stage from clutter_stage_get_default. 

	* examples/super-oh.c: (main):
	Remove some now uneeded debug g_prints

2006-06-05  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-color.h:
	* clutter-color.c: Reimplement ClutterColor as a boxed type;
	add convenience API for color handling, like: add, subtract,
	shade, HSL color-space conversion, packing and unpacking.

	* clutter-private.h: Update ClutterMainContext, and export the
	main context pointer here.

	* clutter-rectangle.h:
	* clutter-rectangle.c: Update the color-related code; make
	clutter_rectangle_new() and empty constructor and provide
	clutter_rectangle_new_with_color(); provide color setter
	and getter API.

	* clutter-label.h:
	* clutter-label.c: Rename the "font" property to "font-name";
	update the color-related code to the new ClutterColor object;
	rename clutter_label_new() to clutter_label_new_with_text(),
	and add setters and getters for the properties.

	* clutter-marshal.list: Add VOID:OBJECT and VOID:BOXED marshallers
	generators.

	* clutter-stage.h:
	* clutter-stage.c: Rework the API: provide a default constructor
	for a singleton object, named clutter_stage_get_default(), which
	supercedes the clutter_stage() function in clutter-main; provide
	new events: button-press-event, button-release-event,
	key-press-event and key-release-event; update the color-related
	code;

	(clutter_stage_snapshot): Allow negative width and height when
	taking a snapshot (meaning: use full width/height).
